[gd_scene load_steps=12 format=2]

[ext_resource path="res://autotile/terrain_simple.tscn" type="PackedScene" id=1]
[ext_resource path="res://fighting/dude/dude.tscn" type="PackedScene" id=2]
[ext_resource path="res://test/fighting/tilemap.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/texture/background/forest.png" type="Texture" id=4]
[ext_resource path="res://scenes/fighting/bosque/spikes.tscn" type="PackedScene" id=5]
[ext_resource path="res://fighting/mobs/bobby/bobby.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/fighting/elements/dummy_spawner.gd" type="Script" id=7]
[ext_resource path="res://fighting/mobs/dummy/dummy.tscn" type="PackedScene" id=8]
[ext_resource path="res://textbox/textbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/fighting/bosque/bosque.gd" type="Script" id=10]

[sub_resource type="TileSet" id=1]
0/name = "forest.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 320, 320 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="bosque" type="Node2D"]
script = ExtResource( 10 )

[node name="terrain_simple" parent="." instance=ExtResource( 1 )]
visible = false
tile_data = PoolIntArray( 0, 0, 589824, 1, 0, 589824, 2, 0, 589824, 3, 0, 589824, 4, 0, 589824, 5, 0, 589824, 6, 0, 589824, 7, 0, 589824, 8, 0, 589824, 9, 0, 589824, 10, 0, 589824, 11, 0, 589824, 12, 0, 589824, 13, 0, 589824, 14, 0, 589824, 15, 0, 589824, 16, 0, 589824, 17, 0, 589824, 18, 0, 589824, 19, 0, 589824, 65536, 0, 589824, 65537, 0, 786433, 65538, 0, 786433, 65539, 0, 786433, 65540, 0, 786433, 65541, 0, 786433, 65542, 0, 786433, 65543, 0, 786433, 65544, 0, 786433, 65545, 0, 786433, 65546, 0, 786433, 65547, 0, 786433, 65548, 0, 786433, 65549, 0, 786433, 65550, 0, 786433, 65551, 0, 786433, 65552, 0, 786433, 65553, 0, 786433, 65554, 0, 786433, 65555, 0, 589824, 131072, 0, 589824, 131073, 0, 786433, 131074, 0, 786433, 131075, 0, 786433, 131076, 0, 786433, 131077, 0, 786433, 131078, 0, 786433, 131079, 0, 786433, 131080, 0, 786433, 131081, 0, 786433, 131082, 0, 786433, 131083, 0, 786433, 131084, 0, 786433, 131085, 0, 786433, 131086, 0, 786433, 131087, 0, 786433, 131088, 0, 786433, 131089, 0, 786433, 131090, 0, 786433, 131091, 0, 589824, 196608, 0, 589824, 196609, 0, 786433, 196610, 0, 786433, 196611, 0, 786433, 196612, 0, 786433, 196613, 0, 786433, 196614, 0, 786433, 196615, 0, 786433, 196616, 0, 786433, 196617, 0, 786433, 196618, 0, 786433, 196619, 0, 786433, 196620, 0, 786433, 196621, 0, 786433, 196622, 0, 786433, 196623, 0, 786433, 196624, 0, 786433, 196625, 0, 786433, 196626, 0, 786433, 196627, 0, 589824, 262144, 0, 589824, 262145, 0, 786433, 262146, 0, 786433, 262147, 0, 786433, 262148, 0, 786433, 262149, 0, 786433, 262150, 0, 786433, 262151, 0, 786433, 262152, 0, 786433, 262153, 0, 786433, 262154, 0, 786433, 262155, 0, 786433, 262156, 0, 786433, 262157, 0, 786433, 262158, 0, 786433, 262159, 0, 786433, 262160, 0, 786433, 262161, 0, 786433, 262162, 0, 786433, 262163, 0, 589824, 327680, 0, 589824, 327681, 0, 786433, 327682, 0, 786433, 327683, 0, 786433, 327684, 0, 589824, 327685, 0, 589824, 327686, 0, 589824, 327687, 0, 589824, 327688, 0, 589824, 327689, 0, 786433, 327690, 0, 786433, 327691, 0, 786433, 327692, 0, 589824, 327693, 0, 589824, 327694, 0, 589824, 327695, 0, 589824, 327696, 0, 589824, 327697, 0, 786433, 327698, 0, 786433, 327699, 0, 589824, 393216, 0, 589824, 393217, 0, 786433, 393218, 0, 786433, 393219, 0, 786433, 393220, 0, 589824, 393221, 0, 786433, 393222, 0, 786433, 393223, 0, 786433, 393224, 0, 589824, 393225, 0, 786433, 393226, 0, 786433, 393227, 0, 786433, 393228, 0, 589824, 393229, 0, 786433, 393230, 0, 786433, 393231, 0, 786433, 393232, 0, 589824, 393233, 0, 786433, 393234, 0, 786433, 393235, 0, 589824, 458752, 0, 589824, 458753, 0, 786433, 458754, 0, 786433, 458755, 0, 786433, 458756, 0, 589824, 458757, 0, 786433, 458758, 0, 786433, 458759, 0, 786433, 458760, 0, 786433, 458761, 0, 786433, 458762, 0, 786433, 458763, 0, 786433, 458764, 0, 786433, 458765, 0, 786433, 458766, 0, 786433, 458767, 0, 786433, 458768, 0, 589824, 458769, 0, 786433, 458770, 0, 786433, 458771, 0, 589824, 524288, 0, 589824, 524289, 0, 786433, 524290, 0, 786433, 524291, 0, 786433, 524292, 0, 589824, 524293, 0, 786433, 524294, 0, 786433, 524295, 0, 786433, 524296, 0, 786433, 524297, 0, 786433, 524298, 0, 786433, 524299, 0, 786433, 524300, 0, 786433, 524301, 0, 786433, 524302, 0, 786433, 524303, 0, 786433, 524304, 0, 786433, 524305, 0, 786433, 524306, 0, 786433, 524307, 0, 589824, 589824, 0, 589824, 589825, 0, 786433, 589826, 0, 786433, 589827, 0, 786433, 589828, 0, 589824, 589829, 0, 786433, 589830, 0, 786433, 589831, 0, 589824, 589832, 0, 589824, 589833, 0, 589824, 589834, 0, 589824, 589835, 0, 589824, 589836, 0, 589824, 589837, 0, 786433, 589838, 0, 786433, 589839, 0, 786433, 589840, 0, 786433, 589841, 0, 786433, 589842, 0, 786433, 589843, 0, 589824, 655360, 0, 589824, 655361, 0, 786433, 655362, 0, 786433, 655363, 0, 786433, 655364, 0, 589824, 655365, 0, 786433, 655366, 0, 786433, 655367, 0, 786433, 655368, 0, 786433, 655369, 0, 786433, 655370, 0, 786433, 655371, 0, 786433, 655372, 0, 786433, 655373, 0, 786433, 655374, 0, 786433, 655375, 0, 786433, 655376, 0, 589824, 655377, 0, 786433, 655378, 0, 786433, 655379, 0, 589824, 720896, 0, 589824, 720897, 0, 786433, 720898, 0, 786433, 720899, 0, 786433, 720900, 0, 589824, 720901, 0, 786433, 720902, 0, 786433, 720903, 0, 786433, 720904, 0, 786433, 720905, 0, 786433, 720906, 0, 786433, 720907, 0, 786433, 720908, 0, 786433, 720909, 0, 786433, 720910, 0, 786433, 720911, 0, 786433, 720912, 0, 589824, 720913, 0, 786433, 720914, 0, 786433, 720915, 0, 589824, 786432, 0, 589824, 786433, 0, 786433, 786434, 0, 786433, 786435, 0, 786433, 786436, 0, 589824, 786437, 0, 786433, 786438, 0, 786433, 786439, 0, 786433, 786440, 0, 786433, 786441, 0, 786433, 786442, 0, 786433, 786443, 0, 786433, 786444, 0, 786433, 786445, 0, 786433, 786446, 0, 786433, 786447, 0, 786433, 786448, 0, 589824, 786449, 0, 786433, 786450, 0, 786433, 786451, 0, 589824, 851968, 0, 589824, 851969, 0, 786433, 851970, 0, 786433, 851971, 0, 786433, 851972, 0, 589824, 851973, 0, 589824, 851974, 0, 589824, 851975, 0, 589824, 851976, 0, 786433, 851977, 0, 786433, 851978, 0, 786433, 851979, 0, 786433, 851980, 0, 589824, 851981, 0, 589824, 851982, 0, 589824, 851983, 0, 589824, 851984, 0, 589824, 851985, 0, 786433, 851986, 0, 786433, 851987, 0, 589824, 917504, 0, 589824, 917505, 0, 786433, 917506, 0, 786433, 917507, 0, 786433, 917508, 0, 589824, 917509, 0, 786433, 917510, 0, 786433, 917511, 0, 786433, 917512, 0, 786433, 917513, 0, 786433, 917514, 0, 786433, 917515, 0, 786433, 917516, 0, 786433, 917517, 0, 786433, 917518, 0, 786433, 917519, 0, 786433, 917520, 0, 589824, 917521, 0, 786433, 917522, 0, 786433, 917523, 0, 589824, 983040, 0, 589824, 983041, 0, 786433, 983042, 0, 786433, 983043, 0, 786433, 983044, 0, 589824, 983045, 0, 786433, 983046, 0, 786433, 983047, 0, 589824, 983048, 0, 589824, 983049, 0, 786433, 983050, 0, 786433, 983051, 0, 786433, 983052, 0, 786433, 983053, 0, 786433, 983054, 0, 786433, 983055, 0, 786433, 983056, 0, 786433, 983057, 0, 786433, 983058, 0, 786433, 983059, 0, 589824, 1048576, 0, 589824, 1048577, 0, 786433, 1048578, 0, 786433, 1048579, 0, 786433, 1048580, 0, 786433, 1048581, 0, 786433, 1048582, 0, 786433, 1048583, 0, 786433, 1048584, 0, 786433, 1048585, 0, 786433, 1048586, 0, 786433, 1048587, 0, 786433, 1048588, 0, 786433, 1048589, 0, 786433, 1048590, 0, 786433, 1048591, 0, 786433, 1048592, 0, 786433, 1048593, 0, 786433, 1048594, 0, 786433, 1048595, 0, 589824, 1114112, 0, 589824, 1114113, 0, 589824, 1114114, 0, 589824, 1114115, 0, 589824, 1114116, 0, 589824, 1114117, 0, 589824, 1114118, 0, 589824, 1114119, 0, 589824, 1114120, 0, 589824, 1114121, 0, 589824, 1114122, 0, 589824, 1114123, 0, 589824, 1114124, 0, 589824, 1114125, 0, 589824, 1114126, 0, 589824, 1114127, 0, 589824, 1114128, 0, 589824, 1114129, 0, 589824, 1114130, 0, 589824, 1114131, 0, 589824 )

[node name="background" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 65501, 0, 0, 65506, 0, 0, 65511, 0, 0, 65516, 0, 0, 65521, 0, 0, 65526, 0, 0, 65531, 0, 0, 0, 0, 0, 5, 0, 0, 10, 0, 0, 15, 0, 0 )

[node name="terrain" parent="." instance=ExtResource( 3 )]
collision_layer = 2
tile_data = PoolIntArray( 458777, 0, 0, 524313, 0, 0, 589849, 0, 0, 720848, 0, 0, 720849, 0, 0, 720850, 0, 0, 655385, 0, 0, 786384, 0, 0, 786385, 0, 0, 786386, 0, 0, 720921, 0, 0, 851920, 0, 0, 851921, 0, 0, 851922, 0, 0, 786457, 0, 0, 917456, 0, 0, 917457, 0, 0, 917458, 0, 0, 917467, 0, 0, 851993, 0, 0, 982992, 0, 0, 982993, 0, 0, 982994, 0, 0, 983003, 0, 0, 983024, 1, 0, 983025, 1, 0, 917529, 0, 0, 1048528, 0, 0, 1048529, 0, 0, 1048530, 0, 0, 1048539, 0, 0, 1048542, 0, 0, 1048543, 0, 0, 1048544, 0, 0, 1048564, 1, 0, 1048565, 1, 0, 1048566, 1, 0, 1048567, 1, 0, 983065, 0, 0, 1114064, 0, 0, 1114065, 0, 0, 1114066, 0, 0, 1114078, 0, 0, 1114079, 0, 0, 1114080, 0, 0, 1114105, 0, 0, 1114106, 0, 0, 1114107, 0, 0, 1114111, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048601, 0, 0, 1179600, 0, 0, 1179601, 0, 0, 1179602, 0, 0, 1179614, 0, 0, 1179615, 0, 0, 1179616, 0, 0, 1179641, 0, 0, 1179642, 0, 0, 1179643, 0, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114137, 0, 0, 1245150, 0, 0, 1245151, 0, 0, 1245152, 0, 0, 1245177, 0, 0, 1245178, 0, 0, 1245179, 0, 0, 1179673, 0, 0, 1310686, 0, 0, 1310687, 0, 0, 1310688, 0, 0, 1310713, 0, 0, 1310714, 0, 0, 1310715, 0, 0, 1245209, 0, 0, 1376116, 0, 0, 1376117, 0, 0, 1376118, 0, 0, 1376119, 0, 0, 1376120, 0, 0, 1376121, 0, 0, 1376122, 0, 0, 1376123, 0, 0, 1376124, 0, 0, 1376125, 0, 0, 1376126, 0, 0, 1376127, 0, 0, 1376128, 0, 0, 1376129, 0, 0, 1376130, 0, 0, 1376131, 0, 0, 1376132, 0, 0, 1376133, 0, 0, 1376134, 0, 0, 1376135, 0, 0, 1376136, 0, 0, 1376137, 0, 0, 1376138, 0, 0, 1376139, 0, 0, 1376140, 0, 0, 1376141, 0, 0, 1376142, 0, 0, 1376143, 0, 0, 1376144, 0, 0, 1376145, 0, 0, 1376146, 0, 0, 1376147, 0, 0, 1376148, 0, 0, 1376149, 0, 0, 1376150, 0, 0, 1376151, 0, 0, 1376152, 0, 0, 1376153, 0, 0, 1376154, 0, 0, 1376155, 0, 0, 1376156, 0, 0, 1376157, 0, 0, 1376158, 0, 0, 1376159, 0, 0, 1376160, 0, 0, 1376161, 0, 0, 1376162, 0, 0, 1376163, 0, 0, 1376164, 0, 0, 1376165, 0, 0, 1376166, 0, 0, 1376167, 0, 0, 1376168, 0, 0, 1376169, 0, 0, 1376170, 0, 0, 1376171, 0, 0, 1376172, 0, 0, 1376173, 0, 0, 1376174, 0, 0, 1376175, 0, 0, 1376176, 0, 0, 1376177, 0, 0, 1376178, 0, 0, 1376179, 0, 0, 1376180, 0, 0, 1376181, 0, 0, 1376182, 0, 0, 1376183, 0, 0, 1376184, 0, 0, 1376185, 0, 0, 1376186, 0, 0, 1376187, 0, 0, 1376188, 0, 0, 1376189, 0, 0, 1376190, 0, 0, 1376191, 0, 0, 1376192, 0, 0, 1376193, 0, 0, 1376194, 0, 0, 1376195, 0, 0, 1376196, 0, 0, 1376197, 0, 0, 1376198, 0, 0, 1376199, 0, 0, 1376200, 0, 0, 1376201, 0, 0, 1376212, 0, 0, 1376213, 0, 0, 1376214, 0, 0, 1376215, 0, 0, 1376216, 0, 0, 1376217, 0, 0, 1376218, 0, 0, 1376219, 0, 0, 1376220, 0, 0, 1376221, 0, 0, 1376222, 0, 0, 1376223, 0, 0, 1376224, 0, 0, 1376225, 0, 0, 1376226, 0, 0, 1376227, 0, 0, 1376228, 0, 0, 1376229, 0, 0, 1376230, 0, 0, 1376231, 0, 0, 1376232, 0, 0, 1376233, 0, 0, 1376234, 0, 0, 1376235, 0, 0, 1376236, 0, 0, 1376237, 0, 0, 1376238, 0, 0, 1376239, 0, 0, 1376240, 0, 0, 1376241, 0, 0, 1376242, 0, 0, 1376243, 0, 0, 1376244, 0, 0, 1376245, 0, 0, 1376246, 0, 0, 1376247, 0, 0, 1376248, 0, 0, 1376249, 0, 0, 1376250, 0, 0, 1376251, 0, 0, 1376252, 0, 0, 1376253, 0, 0, 1376254, 0, 0, 1376255, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310744, 0, 0, 1310745, 0, 0 )

[node name="spikes" parent="." instance=ExtResource( 5 )]

[node name="spikes" parent="spikes/hitbox" index="0"]
damage = 25.0

[node name="TileMap" parent="spikes/hitbox/spikes" index="0"]
tile_data = PoolIntArray( 1376202, 0, 0, 1376203, 0, 0, 1376204, 0, 0, 1376205, 0, 0, 1376206, 0, 0, 1376207, 0, 0, 1376208, 0, 0, 1376209, 0, 0, 1376210, 0, 0, 1376211, 0, 0 )

[node name="knockback" parent="spikes/hitbox/spikes" index="1"]
knockback = Vector2( 100, -150 )

[node name="bobby" parent="." instance=ExtResource( 6 )]
position = Vector2( 224, 312 )
speed_lerp = 60.0

[node name="bobby6" parent="." instance=ExtResource( 6 )]
position = Vector2( 104, 263.724 )

[node name="bobby3" parent="." instance=ExtResource( 6 )]
position = Vector2( -184, 304 )

[node name="bobby4" parent="." instance=ExtResource( 6 )]
position = Vector2( -424, 296 )

[node name="bobby7" parent="." instance=ExtResource( 6 )]
position = Vector2( -584, 304 )

[node name="bobby5" parent="." instance=ExtResource( 6 )]
position = Vector2( 64, 248 )

[node name="dude" parent="." instance=ExtResource( 2 )]
position = Vector2( 348.401, 313.906 )

[node name="Camera2D" type="Camera2D" parent="dude"]
current = true

[node name="dummy_spawner" type="Node2D" parent="."]
position = Vector2( -788.583, 305.943 )
script = ExtResource( 7 )

[node name="spawn" type="Node2D" parent="dummy_spawner"]

[node name="dummy" parent="dummy_spawner/spawn" instance=ExtResource( 8 )]

[node name="dummy_spawner2" type="Node2D" parent="."]
position = Vector2( -788.583, 305.943 )
script = ExtResource( 7 )

[node name="spawn" type="Node2D" parent="dummy_spawner2"]

[node name="dummy" parent="dummy_spawner2/spawn" instance=ExtResource( 8 )]
position = Vector2( 310.042, -26.6325 )

[node name="textbox" parent="." instance=ExtResource( 9 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="dead" from="dude" to="." method="player_lose"]
[connection signal="text_display_finished" from="textbox" to="." method="_on_textbox_text_display_finished"]
[connection signal="text_display_started" from="textbox" to="." method="_on_textbox_text_display_started"]

[editable path="spikes"]
